# IllumiViz

./: .project  Cargo.toml  LICENSE_MIT  README.md
.metadata/: version.ini
.metadata/.plugins/org.eclipse.core.resources/.projects/.cargo/: .location
.metadata/.plugins/org.eclipse.core.resources/.root/: 1.tree
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
examples/AY-3-8500/: ay38500_built.json  ay38500_dot.dot  synth_script
examples/serv/: serv_built.json  serv_dot.dot  synth_script
examples/simple/: basic_gates_built.json  basic_gates_dot.dot  basic_ors_built.json  basic_ors_dot.dot  netlistsvg_demo.json  synth_script  wide_gates_built.json  wide_gates_dot.dot
examples/simple/rtl/: basic_gates.v  basic_ors.v  wide_gates.v
examples/verilog-i2c/: i2c_built.json  i2c_dot.dot  synth_script
examples/wubart32/: synth_script
src/: display.rs  lib.rs  logger.rs  netlist.rs  netlist_object.rs  user_input.rs
www/: LICENSE-MIT  index.html  index.js  package-lock.json  package.json
